--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
@@ -1,149 +1,3 @@
-<!DOCTYPE html>
-<!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js" lang="en" dir="ltr">
-<!--<![endif]-->
-<head>
-<meta charset="utf-8"/>
-<meta content="width=device-width,initial-scale=1" name="viewport"/>
-
-<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
-     wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-
-<title>My Service Canada Account</title>
-<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script> 
-<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script>
-
-<noscript>
-<!--[if gte IE 9 | !IE ]><!-->
-<link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/assets/favicon.ico" rel="icon" type="image/x-icon"/>
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/css/theme.min.css"/>
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/cdts/cdtsfixes.css"/>
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/cdts/cdtsapps.css"/>
-<!--<![endif]--> 
-
-<!--[if lt IE 9]>
-				<link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/assets/favicon.ico" rel="shortcut icon"/>
-				<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/css/ie8-theme.min.css"/>
-				<![endif]--> 
-
-<!--[if lte IE 9]><![endif]-->
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/css/noscript.min.css"/>
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/cdts/cdtsnoscript.css"/>
-
-<!--[if gte IE 9 | !IE ]><!-->
-<link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/assets/favicon.ico" rel="icon" type="image/x-icon">
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/css/theme.min.css">
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/cdts/cdtsfixes.css">
-<!-- Are you using the application templates? If so add the following CSS file -->
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/cdts/cdtsapps.css">
-<!--<![endif]--> 
-<!--[if lt IE 9]>
-<link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/assets/favicon.ico" rel="shortcut icon" />
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/css/ie8-theme.min.css" />
-<![endif]--> 
-<!--[if lte IE 9]><![endif]-->
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/css/noscript.min.css" />
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/cdts/cdtsnoscript.css" />
-</noscript>
-<script type="text/javascript">document.write(wet.builder.refTop({ cdnEnv: "AKAMAI", isApplication: true }))</script>
-<style>
-.modal-footer {
-    background-color: #FFF
-}
-</style>
-<style type="text/css">
-.orange-bg {
-    background: linear-gradient(#f68b1f, #f89736);
-}
-.blue-bg {
-    background-color: #11409F;
-}
-.header-bg {
-    line-height: normal;
-    background: linear-gradient(to right, #ddd 50%, #fff 75%, #fff);
-}
-.header-bg .brdr-bttm-fade {
-    width: 100%;
-    height: 4px;
-    background: linear-gradient(to right, #26374a 50%, #fff 75%, #fff);
-}
-.header-bg h2 {
-    background: linear-gradient(297.5deg, transparent, transparent 25px, white 26px, white 31px, #26374a 32px, #26374a);
-    color: white;
-    display: inline-block;
-    margin: 0px;
-    padding: 5px 30px 5px 15px;
-    min-width: 300px;
-    font-size: 1.3em;
-}
-.large-btn {
-    width: 85%;
-    text-align: left;
-}
-.large-btn b {
-    display: inline-block;
-    width: 85%;
-    text-align: center;
-}
-.large-btn img {
-    display: inline-block;
-    width: 10%;
-    margin-left: 3%;
-}
-a.btn-green:hover, a.btn-purple:hover, a.btn-blue:hover {
-    color: white;
-}
-a.btn-green:link, a.btn-green:visited, a.btn-green:hover, a.btn-green:active, a.btn-purple:link, a.btn-purple:visited, a.btn-purple:hover, a.btn-purple:active, a.btn-blue:link, a.btn-blue:visited, a.btn-blue:hover, a.btn-blue:active {
-    color: white;
-    padding-left: 5px;
-}
-a.btn-green {
-    background: #444;
-}
-a.btn-green:hover, a.btn-green:active {
-    background: #787878;
-}
-a.btn-purple {
-    background: #32002A;
-}
-a.btn-purple:hover, a.btn-purple:active {
-    background: #4A0B38;
-}
-a.btn-blue:link, a.btn-blue:visited {
-    background: #283a7b;
-}
-a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
-    background: #26374a;
-}
-	/*
-	
-		
-	a.btn-green {
-		background: #000000;
-	}
-	a.btn-green:hover, a.btn-green:active {
-		background: #787878;
-	}
-	
-	
-	a.btn-purple {
-		background: #32002A;
-	}
-	a.btn-purple:hover, a.btn-purple:active {
-		background: #4A0B38;
-	}
-	
-	
-	a.btn-blue {
-		background: #26374a;
-	}
-	a.btn-blue:hover, a.btn-blue:active {
-		background: #26374a;
-	}*/
-</style>
-</head>
-
 <body vocab="http://schema.org/" typeof="WebPage">
 <div id="def-top">
   <ul id="wb-tphp">
@@ -251,7 +105,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         
         <!-- List group -->
         <ul class="list-group">
-          <li class="list-group-item"><a href="#a1-1">Demandes de prestations du RPC </a></li>
+          <li class="list-group-item"><a href="#a1-1">Demandes du RPC </a></li>
           <li class="list-group-item"><a href="#a1-2">Demandes de la SV/SRG </a></li>
            <li class="list-group-item"><a href="#a1-6">Clause pour élever des enfants </a></li>
 			<li class="list-group-item"><a href="#a1-7">Renseignements fiscaux</a></li>
@@ -288,13 +142,13 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
-            <h2 id="a1-1" class="mrgn-tp-0">Demandes de prestations du RPC&nbsp;</h2>
+            <h2 id="a1-1" class="mrgn-tp-0">Demandes du RPC&nbsp;</h2>
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
           <p>Présenter une demande de prestations du RPC ou consulter les  renseignements détaillés sur l&rsquo;état de votre demande.</p>
 <ul class="list-unstyled list-inline">
-		    <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-Retirement-fr.html';" type="button" class="btn btn-default">Présenter ma demande de pension de retraite du RPC</button></li>
+		    <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-Retirement-fr.html';" type="button" class="btn btn-default">Présenter ma demande de pension du RPC</button></li>
          <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-disability-fr.html';" type="button" class="btn btn-default">Présenter ma demande de prestations d'invalidité du RPC</button></li>
           <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Application-status-fr.html';" type="button" class="btn btn-default">L'état de demande</button></li>
 		  </ul>
@@ -525,5 +379,3 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 </div>
 <script type="text/javascript">AdfBootstrap._onLoad=function (){if (AdfPage.PAGE.__checkRichResponseDirty()) return;var isCachedPage = false;if (!isCachedPage){window.name='jtuuy02hd';};AdfAgent.AGENT.elementsAdded(document);AdfDhtmlLookAndFeel.addSkinProperties({"af|dialog-tr-open-animation-duration":"300","af|messages::summary":"af_messages_summary","AFPopupSelectorFooterStart":"AFPopupSelectorFooterStart","af|message::container":"af_message_container","AFPopupSelectorContentEnd":"AFPopupSelectorContentEnd","af|message::detail-cell":"af_message_detail-cell","AFPopupSelectorContent":"AFPopupSelectorContent","af|messages::message-group-list":"af_messages_message-group-list","af|message::component-messages-list-container":"af_message_component-messages-list-container","af|dialog::resize-ghost":"af_dialog_resize-ghost","AFPopupSelectorFooterEnd":"AFPopupSelectorFooterEnd","af|messages::intro":"af_messages_intro",".AFPopupSelector-tr-animate":"true","af|popup-tr-shadow-starting-black-percent":100,"AFPopupSelector":"AFPopupSelector",".AFWorkaround-tr-disable-property-delta-sync":"false","af|popup-tr-shadow-pixel-size":4,"af|messages::message-group-type-separator":"af_messages_message-group-type-separator","af|messages::message-group-title":"af_messages_message-group-title","af|message::message-list-component":"af_message_message-list-component","af|message::intro":"af_message_intro","af|popup-tr-shadow-offset":3,"AFPopupSelectorHeader":"AFPopupSelectorHeader","af|messages::detail":"af_messages_detail","af|message::type":"af_message_type","AFPopupSelectorHeaderStart":"AFPopupSelectorHeaderStart","af|message::detail":"af_message_detail","af|messages::header-text":"af_messages_header-text",".AFNoteWindow-tr-open-animation-duration":"200","af|message::icon-cell":"af_message_icon-cell","AFPopupSelectorContentStart":"AFPopupSelectorContentStart","AFPopupSelectorFooter":"AFPopupSelectorFooter","af|messages::message-list-page":"af_messages_message-list-page","AFPopupSelectorHeaderEnd":"AFPopupSelectorHeaderEnd",".AFNoteWindow-tr-animate":"true","af|messages::component-link":"af_messages_component-link",".AFPopupSelector-tr-open-animation-duration":"200","af|dialog-tr-animate":"true","af|message::summary":"af_message_summary"});AdfPage.PAGE.addComponents(new AdfRichDocument('document',{'title':'My Service Canada Account - Home'}),new AdfRichDialog('document::msgDlg',{'okVisible':false,'cancelVisible':false,'cancelTextAndAccessKey':'OK','modal':false,'resize':'on','title':''}),new AdfDialogServicePopupContainer('afr::DlgSrvPopupCtnr'),new AdfRichPopup('j_id38',{'contentDelivery':'immediate'}),new AdfRichDialog('j_id39',{'okVisible':false,'cancelVisible':false,'closeIconVisible':false}));AdfPage.PAGE.setDefaultMessageHandlerComponentId("document");AdfPage.PAGE.__initUserInactivityTimeout(600000);page.__setCssSelectorsUncompressed(true);AdfPage.PAGE.__setViewId('/oracle/webcenter/portalapp/pages/home.jspx');var exScripts=AdfBootstrap._extendedScripts;for (var i=0;i<exScripts.length;i++){exScripts[i]()};AdfBootstrap._extendedScripts=null;AdfPage.PAGE.__onLoad();};window.onload=AdfBootstrap._onLoad;</script><script type="text/javascript">AdfBootstrap._extendedScripts=[];</script>
 </body>
-<!--Created by Oracle ADF (ADF Faces API - 11.1.1.9.0 / ADF Faces Implementation - 11.1.1.9.0, RCF-revision: 63592 (branch: faces-1507-11.1.1.9.0-release, plugins: 1.2.3.1), Trinidad-revision: 2816 (branch: 1.2.12.9.0.release-branch, plugins: 1.2.10.3), build: adf-faces-rt_171102_1221, patch: MLR-27056561, libNum: 7306 / ADF-Controller{Oracle-BuildSystem=Linux - java - 1.6.0_35-b10, Oracle-Version=11.1.1.9.40.66.73, Oracle-Internal-Release=None, Created-By=20.10-b01 (Sun Microsystems Inc.), Oracle-Builder=user=brmohant host=slc05ynp, Oracle-Label=JDEVADF_11.1.1.9.0_GENERIC_RELEASE, Oracle-BuildTimestamp=2017-10-23 08:36:39 -0700} ADF-Model{Oracle-BuildSystem=Linux - java - 1.6.0_35-b10, Oracle-Version=11.1.1.9.40.66.73, Oracle-Internal-Release=None, Created-By=20.10-b01 (Sun Microsystems Inc.), Oracle-Builder=user=brmohant host=slc05ynp, Oracle-Label=JDEVADF_11.1.1.9.0_GENERIC_RELEASE, Oracle-BuildTimestamp=2017-10-23 08:30:21 -0700} ADF-Share{Oracle-BuildSystem=Linux - java - 1.6.0_35-b10, Oracle-Version=11.1.1.9.40.66.73, Oracle-Internal-Release=None, Created-By=20.10-b01 (Sun Microsystems Inc.), Oracle-Builder=user=brmohant host=slc05ynp, Oracle-Label=JDEVADF_11.1.1.9.0_GENERIC_RELEASE, Oracle-BuildTimestamp=2017-10-23 08:09:31 -0700}  / powered by JavaServer Faces - 1.2), accessibility (mode:null, contrast:standard, size:medium), skin:wet4-cdts.desktop (wet4-cdts)-->
-</html>
