--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -269,12 +269,12 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         
         <!-- List group -->
         <ul class="list-group">
-          <li class="list-group-item"><a href="" rel="external">Remplir ma déclaration d'a.-e. en ligne</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
-          <li class="list-group-item"><a href="" rel="external">Présenter ma demande d'a.-e. en ligne</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
-          <li class="list-group-item"><a href="" rel="external">Faire appel d'une décision de l'a.-e.</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
-          <li class="list-group-item"><a href="" rel="external">Remplir d'autres formulaires d'a.-e.</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="" rel="external">Remplir ma déclaration d'assurance-emploi en ligne</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="" rel="external">Présenter ma demande d'assurance-emploi en ligne</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="" rel="external">Faire appel d'une décision de l'assurance-emploi</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="" rel="external">Remplir d'autres formulaires d'assurance-emploi</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="" rel="external">Trouver un emploi sur Guichet emplois</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
-          <li class="list-group-item"><a href="">Publications de l'a.-e.</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="">Publications de l'assurance-emploi</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
 		  <li class="list-group-item"><a href="">Faire une demande de passeport</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Contactez-nous</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
         </ul>
@@ -327,7 +327,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             </details>
             <ul class="list-unstyled list-inline">
 				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/address-telephone-fr.html';" type="button" class="btn btn-default">Adresse postale et numéro de téléphone</button></li>
-            <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/direct-deposit-fr.html';" type="button" class="btn btn-default">Dépôt direct (A.-E.)</button></li>
+            <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/direct-deposit-fr.html';" type="button" class="btn btn-default">Dépôt direct</button></li>
             <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/language-fr.html';" type="button" class="btn btn-default">Langue de préférence</button></li>
 		    </ul>
           </div>
@@ -360,7 +360,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>Les Feuillet de  renseignements fiscaux (T4E) vous permettent de consulter et d&rsquo;imprimer vos T4E  pour les 6 dernières années, si vous avez reçu des prestations  d&rsquo;assurance-emploi.</p>
+          <p>Les Feuillets de  renseignements fiscaux (T4E) vous permettent de consulter et d&rsquo;imprimer vos T4E  pour les 6 dernières années, si vous avez reçu des prestations  d&rsquo;assurance-emploi.</p>
           <p>Les options  d&rsquo;expédition de mon feuillet de renseignements fiscaux vous permettent de  choisir de recevoir vos T4E électroniquement ou par la poste. Vous pouvez  modifier votre choix plus tard et quand même consulter et imprimer vos T4E.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E-fr.html';" type="button" class="btn btn-default">Feuillet de renseignements fiscaux (T4E)</button></li>
