--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -296,7 +296,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <br />
             <p>When you select View  my status and correspondence (Alert me), you can check your latest claim&rsquo;s  status and messages.</p>
 <p>You can also receive  email notifications if you register for the Alert me service.</p>
-<p>If you have an  active claim, Latest claim and Payment Information show details, such as start  date, weekly benefit rate, number of weeks paid and payment details.</p>
+<p>If you have an  active claim, Latest claim and Payment information show details, such as start  date, weekly benefit rate, number of weeks paid and payment details.</p>
 <div>
   <div> </div>
 </div>
