--- a/scenarioA/services/my-account/MSCA/EI/personal-information/direct-deposit.html
+++ b/scenarioA/services/my-account/MSCA/EI/personal-information/direct-deposit.html
@@ -167,9 +167,9 @@
   <br />
 	 <p>Verify that the information you have provided is accurate.</</p>
 <div class="well well-sm">
-<p>Branch Number: 30582<br />
+<p>Branch Number: 00002<br />
 	Institution Number: 001<br />
-	Account Number: 8510231</p>
+	Account Number: 1234567</p>
 </div>
    <p>By providing this information, I authorize Employment and Social Development Canada (ESDC) to redirect the deposit of my Employment Insurance benefits when ESDC is notified by the financial institution of changes to the name, branch or account number.</p>
 
@@ -187,13 +187,13 @@
     <button type="button" class="btn btn-default">Submit</button>
 <button type="button" class="btn btn-default">Cancel changes</button>
 
-<p><strong>- OR - alternate message</strong></p>
+<!--<p><strong>- OR - alternate message</strong></p>
 
 <p>You are not currently registered for Direct Deposit which is our standard method of issuing EI payments. With Direct Deposit, your EI payments are deposited electronically into your bank account. This means that you will receive your payments faster.</p>
 <p>Apply for Direct Deposit now using secure online service. From the My Service Canada Account Home page click on the "Change" tab and then click the "View/change my Direct Deposit" link under the "Employment Insurance (EI)" heading to enter or change your bank account information.</p>
 <p>Please note that updates to your direct deposit information can only be accepted during the service times for your province or territory of residence.</p>
 
-<button type="button" class="btn btn-default">Changee</button>
+<button type="button" class="btn btn-default">Change</button>-->
  
 <p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Return to Employment Insurance main menu</a></p>
    
