--- a/scenarioA/services/my-account/MSCA/EI/personal-information/address-telephone-fr.html
+++ b/scenarioA/services/my-account/MSCA/EI/personal-information/address-telephone-fr.html
@@ -251,9 +251,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   <br />
 	 
 <div class="well well-sm">
-<p>67 EAST 34TH ST<br />
+<p>1234 GREEN AVENUE<br />
 	HAMILTON ONT<br />
-	</b>L8V 3X4</p></div>
+	</b>L8V 3X0</p></div>
    <p>Veuillez noter que les mises à jour concernant votre dépôt direct peuvent seulement être acceptées au cours des heures de service pour votre province ou territoire de résidence.</p>
 
 
