--- a/scenarioA/services/my-account/MSCA/EI/personal-information/address-telephone.html
+++ b/scenarioA/services/my-account/MSCA/EI/personal-information/address-telephone.html
@@ -167,9 +167,9 @@
   <br />
 	 
 <div class="well well-sm">
-<p>1234 GREEN AVENUE<br />
-	HAMILTON ONT<br />
-	</b>L8V 3X0</p></div>
+<p>111 STREET NAME<br />
+	CITY, PROVINCE<br />
+	</b>1A1 A1A</p></div>
    <p>Please note that updates to your direct deposit information can only be accepted during the service times for your province or territory of residence.</p>
 
 
