--- a/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate.html
@@ -187,10 +187,10 @@
   <div class="panel-body">
    <p><strong>Authorized person</strong></p>
   <p>Ann Smith<br>
-   1 RUE MARQUETTE<br>
-   GATINEAU QC<br>
+   1  STREET NAME<br>
+   CITY, PROVINCE<br>
    A1A 1A1<br>
-   (613) 555 5555</p>
+   (555) 555 5555</p>
 <p><strong>Relationship</strong></p>
    <p>Sister-in-Law</p>
    <a class="btn btn-primary" href="###">Change</a>
@@ -208,10 +208,10 @@
   <div class="panel-body">
    <p><strong>Authorized person</strong></p>
   <p>Babacar Diop<br>
-   1 PETERSON PL<br>
-   KANATA ON<br>
+   1  STREET NAME<br>
+   CITY, PROVINCE<br>
    A2A 2A2<br>
-   (613) 555 5555</p>
+   (555) 555 5555</p>
 <p><strong>Relationship</strong></p>
    <p>Mother-in-Law</p>
    <a class="btn btn-primary" href="###">Change</a>
@@ -229,11 +229,11 @@
   </header>
   <div class="panel-body">
    <p><strong>Authorized person</strong></p>
-  <p>Joe Fake<br>
-   100 COLONEL BY DR <br>
-   OTTAWA ON <br>
+  <p>Joe Manna<br>
+   100  STREET NAME<br>
+   CITY, PROVINCE<br>
    A3A 3A3<br>
-   (613) 555 5555</p>
+   (555) 555 5555</p>
 <p><strong>Relationship</strong></p>
    <p>Father</p>
    <a class="btn btn-primary" href="###">Change</a>
@@ -251,10 +251,10 @@
   <div class="panel-body">
    <p><strong>Authorized person</strong></p>
   <p>Babacar Diop<br>
-   1 PETERSON PL<br>
-   KANATA ON<br>
+   1  STREET NAME<br>
+   CITY, PROVINCE<br>
    A2A 2A2<br>
-   (613) 555 5555</p>
+   (555) 555 5555</p>
 <p><strong>Relationship</strong></p>
    <p>Mother-in-Law</p>
    <a class="btn btn-primary" href="###">Change</a>
