--- a/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate-fr.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate-fr.html
@@ -274,10 +274,10 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   <div class="panel-body">
    <p><strong>Personne autorisée</strong></p>
   <p>Ann Smith<br>
-   1 RUE MARQUETTE<br>
-   GATINEAU QC<br>
+   1 NOM DE RUE<br>
+   VILLE, PROVINCE<br>
    A1A 1A1<br>
-   (613) 555 5555</p>
+   (555) 555 5555</p>
 <p><strong>Relation avec vous</strong></p>
    <p>Belle-soeur</p>
    <a class="btn btn-primary" href="###">Changer</a>
@@ -295,10 +295,10 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   <div class="panel-body">
    <p><strong>Personne autorisée</strong></p>
   <p>Babacar Diop<br>
-   1 PETERSON PL<br>
-   KANATA ON<br>
+   1 NOM DE RUE<br>
+   VILLE, PROVINCE<br>
    A2A 2A2<br>
-   (613) 555 5555</p>
+   (555) 555 5555</p>
 <p><strong>Relation avec vous</strong></p>
    <p>Mère du conjoint(e)</p>
    <a class="btn btn-primary" href="###">Changer</a>
@@ -316,11 +316,11 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   </header>
   <div class="panel-body">
    <p><strong>Personne autorisée</strong></p>
-  <p>Joe Fake<br>
-   100 COLONEL BY DR <br>
-   OTTAWA ON <br>
+  <p>Joe Manna<br>
+   100 NOM DE RUE<br>
+   VILLE, PROVINCE<br>
    A3A 3A3<br>
-   (613) 555 5555</p>
+   (555) 555 5555</p>
 <p><strong>Relation avec vous</strong></p>
    <p>Père</p>
    <a class="btn btn-primary" href="###">Changer</a>
@@ -338,10 +338,10 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   <div class="panel-body">
    <p><strong>Personne autorisée</strong></p>
   <p>Babacar Diop<br>
-   1 PETERSON PL<br>
-   KANATA ON<br>
+   1 NOM DE RUE<br>
+   VILLE, PROVINCE<br>
    A2A 2A2<br>
-   (613) 555 5555</p>
+   (555) 555 5555</p>
 <p><strong>Relation avec vous</strong></p>
    <p>Mère du conjoint(e)</p>
    <a class="btn btn-primary" href="###">Changer</a>
