--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/OAS-GIS.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/OAS-GIS.html
@@ -164,15 +164,31 @@
 
 <p>For more information on OAS pension start date, see help or visit Canada.ca/OAS.</p>
 
-<p><strong>[INSERT DROPDOWN]</strong> age 65 (+ 11 months, and retro down to age 65 + 1 month)</p>
+<div class="row">
+<div class="col-md-4">
+<div class="form-group">
+<select class="form-control" id="dt_wetfeature" name="dt_wetfeature" data-column="4">
+<option value=""></option>
+<option value=""></option>
+</select>
+</div>
+</div></div> age 65 (+ 11 months, and retro down to age 65 + 1 month)</p>
 
 	</section>
 	
 	<section class="panel panel-info">
   <header class="panel-heading">
    <h5 class="panel-title">* Do you want Service Canada to communicate with you in English or in French?</h5>
-  </header>
-<p><strong>[INSERT DROPDOWN]</strong></p>
+  </header> <br />
+<div class="row">
+<div class="col-md-4">
+<div class="form-group">
+<select class="form-control" id="dt_wetfeature" name="dt_wetfeature" data-column="4">
+<option value="English">English</option>
+<option value="French">French</option>
+</select>
+</div>
+</div></div>
 
 		</section>
 
@@ -196,7 +212,7 @@
 
  
 
-<p><strong>-- Only display [spouse/common-law information] when current status is “Married”, “Common-law”, or “Married – Living apart for reasons beyond our control, or “Common-law – Living apart for reasons beyond our control”. --</strong></p>
+<!--<p><strong>-- Only display [spouse/common-law information] when current status is “Married”, “Common-law”, or “Married – Living apart for reasons beyond our control, or “Common-law – Living apart for reasons beyond our control”. --</strong></p>--><hr />
 
 <p><strong>Spouse/common-law partner’s name:</strong> name</p>
 
@@ -206,15 +222,15 @@
 
 <p><strong>Spouse/common-law partner’s date of death:</strong> yyyy-mm-dd</p>
 
- <br /><br />
+ <hr />
 
 <p><strong>Previous marital status:</strong> pre-determined list</p>
 
 <p><strong>Previous marital status start date:</strong> yyyy-mm-dd</p>
 
-<button type="button" class="btn btn-default">Add</button>   <strong>-or- </strong>  <button type="button" class="btn btn-default">Change</button>
+<button type="button" class="btn btn-default">Change</button>
 
-<p><strong>-- When client selects [Change] or [Add], the system must display the Add/Change marital status information (SBT L 002) screen, and returned to Step 1 of 3, with Marital Status updated, and the button displayed should be [Change]--</strong></p>
+<!--<p><strong>-- When client selects [Change] or [Add], the system must display the Add/Change marital status information (SBT L 002) screen, and returned to Step 1 of 3, with Marital Status updated, and the button displayed should be [Change]--</strong></p>-->
 </section>
 
 <section class="panel panel-info">
@@ -234,7 +250,7 @@
 </fieldset>
 </form></p>
 
-<p><strong>-- When client selects the radio button [do not want to apply for the GIS], the system must present the “Decline the GIS” pop-up and hide the “Income” block. --</strong></p>
+<!--<p><strong>-- When client selects the radio button [do not want to apply for the GIS], the system must present the “Decline the GIS” pop-up and hide the “Income” block. --</strong></p>-->
 
 <p><strong>Apply for my OAS pension and the GIS</strong></p>
 
@@ -297,7 +313,7 @@
 
 <button type="button" class="btn btn-default">Add</button>   <strong>-or-</strong>   <button type="button" class="btn btn-default">Change</button>
 
-<p>When client selects [Change] or [Add], the system must display the Add legal status and residence history (SBT E 002) screen, and returned to Step 1 of 3, with Legal Status and Residence History updated, and the button displayed should be [Change]</p>
+<!--<p>When client selects [Change] or [Add], the system must display the Add legal status and residence history (SBT E 002) screen, and returned to Step 1 of 3, with Legal Status and Residence History updated, and the button displayed should be [Change]</p>-->
 
 </section>
 
@@ -348,7 +364,7 @@ Please check your personal information.
 
 <button type="button" class="btn btn-default">Change</button>
 
-<p>When client selects [Change], the system must display the Postal Code (SBT F 026) screen, and returned to Step 1 of 3, with Home address updated.</p>
+<!--<p>When client selects [Change], the system must display the Postal Code (SBT F 026) screen, and returned to Step 1 of 3, with Home address updated.</p>-->
 
 </section>
 
@@ -359,7 +375,7 @@ Please check your personal information.
 
 	  <p>(Pre-filled (telephone)</p>
 
-<button type="button" class="btn btn-default">Add</button> <strong>-or-</strong> <button type="button" class="btn btn-default">Change</button>
+<button type="button" class="btn btn-default">Change</button>
 
 </section>
 
@@ -370,7 +386,7 @@ Please check your personal information.
 
 	  <p>(Pre-filled (direct deposit)</p>
 
-<button type="button" class="btn btn-default">Add</button> <strong>-or-</strong> <button type="button" class="btn btn-default">Change</button>
+<button type="button" class="btn btn-default">Change</button>
 
 <p>Direct deposit is the fastest, most secure and reliable way to receive your OAS payments. Nearly all OAS recipients receive their payments by direct deposit. If you, however, prefer to receive cheques by mail, please cancel your online application and submit a paper application to Service Canada.</p>
 
