--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/OAS-GIS-fr.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/OAS-GIS-fr.html
@@ -254,6 +254,16 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <p>Pour décider quand vous voulez que votre pension début, prenez en compte votre situation personnelle, vos sources de revenu actuelles et futures, votre travail actuel et futur et vos projets de retraite. La <a href="#">Calculatrice du revenu de retraite canadienne</a> peut vous aider à déterminer le meilleur moment pour commencer à recevoir votre pension et vous fournir une estimation des sommes que vous pourriez recevoir.</p>
 
 <p>Pour plus de renseignements sur le report d’une pension de la SV, veuillez consulter la section d’<a href="#">aide</a> ou visiter <a href="#">Canada.gc/SV</a>.</p>
+	<br />
+			<div class="row">
+<div class="col-md-4">
+<div class="form-group">
+<select class="form-control" id="dt_wetfeature" name="dt_wetfeature" data-column="4">
+<option value=""></option>
+<option value=""></option>
+</select>
+</div>
+</div></div>
 
 </section>
 	
@@ -304,7 +314,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 
 <p><strong>Date de décès de l&rsquo;époux ou du conjoint de fait :</strong> aaaa-mm-jj</p>
 
- <br /><br />
+<hr />
 
 <p><strong>Ancien état civil : </strong>pre-determined list</p>
 
@@ -338,7 +348,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 
 <p>En choisissant de refuser le supplément, vous comprenez que si, à l’avenir,  vous changez d’avis, vous devrez présenter une demande. Tout droit (y compris les prestations rétroactives d’une durée maximale de 11 mois, le cas échéant) sera fondé sur les renseignements en vigueur au moment de la demande.</p>
 
-<p>Pous plus de renseignements, visitez Canada.ca/SV.
+		<p>Pous plus de renseignements, visitez Canada.ca/SV.</p>
 
 <button type="button" class="btn btn-primary">Fermer</button>
 </section>
@@ -392,7 +402,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 
 <p>Pour être admissible à la pension de la Sécurité de la vieillesse, au Supplément de revenu garanti, à l’Allocation ou à l’Allocation au survivant, vous devez avoir un statut légal au Canada et vous devez satisfaire aux exigences en matière de résidence. Si vous vivez au Canada, vous devez être citoyen canadien ou résident autorisé au moment où nous approuvons votre demande de pension de Sécurité de la vieillesse; si vous vivez à l’extérieur du Canada, vous devez avoir été citoyen canadien ou résident autorisé du Canada lorsque vous êtes parti.</p>
 
-<button type="button" class="btn btn-default">Ajouter</button>   <strong>-ou-</strong>   <button type="button" class="btn btn-default">Changer</button>
+<button type="button" class="btn btn-default">Changer</button>
 
 <!--<p><strong>--Lorsque le client sélectionne [Ajouter], le système doit afficher l'écran Ajouter statut légal et l’historique de résidence (SBT E 002), puis revenir à l'étape 1 sur 3 avec le statut légal et l'historique de résidence mis à jour et le bouton affiché doit être [Changer].--</strong></p>-->
 
@@ -456,7 +466,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 
 	  <p>(Pre-filled (telephone)</p>
 
-<button type="button" class="btn btn-default">Ajouter</button> <strong>-ou-</strong> <button type="button" class="btn btn-default">Changer</button>
+<button type="button" class="btn btn-default">Changer</button>
 
 </section>
 
@@ -467,7 +477,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 
 	  <p>(Pre-filled (direct deposit)</p>
 
-<button type="button" class="btn btn-default">Ajouter</button> <strong>-ou-</strong> <button type="button" class="btn btn-default">Changer</button>
+</strong> <button type="button" class="btn btn-default">Changer</button>
 
 <p>Le dépôt direct est le moyen le plus rapide, sécuritaire et fiable de recevoir vos paiements de la SV. Presque tous les bénéficiaires de la SV reçoivent leurs bénifices par dépôt direct. Par compte, si vous désirez recevoir vos chèques mensuels par la poste, veuillez annuler votre demande en ligne et envoyez une demande papier à Service Canada.</p>
 
