--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4.html
@@ -174,9 +174,9 @@
 
 <p>When initially opened, "View Tax Slips" shows your slips for the current tax year. If you have not received any payments under Canada Pension Plan (CPP), Old Age Security (OAS) or Employment Insurance (EI) during the current tax year, the page will read "You have no tax slips for YYYY" (current year).</p><br>
 
-<div class="col-md-12 brdr-bttm"></div><br>
+<div class="col-md-12 brdr-bttm"></div>
 
-<h3>Tax Slips for YYYY [year changes depending on the year selected]</h3>
+<h3>Tax Slips for 2019 </h3>
 
 <p>Below is a list of all possible tax slips that are available to the clients.</p>
 
@@ -199,7 +199,7 @@ Statement of OAS Pension Paid or Credited to Non-Residents of Canada</li>
 <li><a href="###">T4E - Employment Insurance Benefits</a> - <strong>Original / Amendment/ Duplicate</strong><br>
 Statement of Employment Insurance and Other Benefits</li><br>
 	</ul>
-<p><strong>- or -</strong> depending if there are no tax slips available.</p><br>
+<!--<p><strong>- or -</strong> depending if there are no tax slips available.</p><br>
 <p><strong>You have no tax slips available for YYYY [year changes depending on the year selected].</strong></p>
 <p>If you want to see your tax slips for previous years, you can select the year from the "Tax year" list. The list will go as far back as 6 years plus the current year.</p>
 <p>View tax slips for another year:</p>
@@ -222,7 +222,7 @@ Statement of Employment Insurance and Other Benefits</li><br>
 <li>If your OAS tax slips have been changed since originally issued in February, you cannot use this service to view the amended version of these tax slips. Use the amended copy mailed to you when you file your tax return with CRA.</li>
 <li>Amended EI tax slips will be available online 4 to 6 weeks after the amendment is processed.</li>
 <li>If you have lost your amended copy or if you wish to make any additional changes to your tax slips, please contact us.</li>
-</ul>
+</ul>-->
 
 
 <a href="#">Return to Canada Pension Plan/Old Age Security</a><br><br>
