--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4-fr.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4-fr.html
@@ -267,9 +267,9 @@ La page « Visualiser les feuillets de renseignements fiscaux » contient la lis
 	  <p>À l'ouverture, la page « Visualiser les feuillets de renseignements fiscaux » montre vos feuillets pour l'année d'imposition en cours. Si vous n'avez pas reçu aucune prestations du Régime de Pensions du Canada (RPC) ou de la Sécurité de la vieillesse (SV) ni de prestations d'assurance-emploi (a.-e.) durant l'année d'imposition en cours, cette page affichera le message « Vous n'avez pas de feuillet de renseignements fiscaux pour AAAA » (année en cours)</p>
 		<hr />
 
-<div class="col-md-12 brdr-bttm"></div><br>
+<div class="col-md-12 brdr-bttm"></div>
 
-<h3>Feuillets de renseignements fiscaux pour AAAA [l'année change selon l'année sélectionnée]</h3>
+<h3>Feuillets de renseignements fiscaux pour 2019 </h3>
 
 <p>Voici une liste de tous les feuillets de renseignements fiscaux disponibles pour les clients, veuillez choisir les relevés qui s’appliquent.</p>
 
@@ -292,7 +292,7 @@ La page « Visualiser les feuillets de renseignements fiscaux » contient la lis
 	<li><a href="###">T4E - Prestations d'assurance-emploi</a> - <strong> Original / Modification / Duplicata</strong><br>
     État des prestations d'assurance-emploi et autres prestations</li><br>
 </ul>
-<p><strong>- ou -</strong> selon le cas, ou il n'a pas de feuillets de renseignements fiscaux disponible.</p><br>
+<!--<p><strong>- ou -</strong> selon le cas, ou il n'a pas de feuillets de renseignements fiscaux disponible.</p><br>
 <p><strong>Vous n’avez pas de feuillets de renseignements fiscaux pour AAAA [l'année change selon l'année sélectionnée]</strong></p>
 <p>Si vous désirez voir vos feuillets de renseignements fiscaux pour les années antérieures, vous pouvez sélectionner l'année désirée dans la liste « Années d'imposition ». La liste remontera jusqu'à 6 ans plus l'année en cours.</p>
 <p>Visualiser les feuillets de renseignements fiscaux d'une autre année :</p>
@@ -319,7 +319,7 @@ La page « Visualiser les feuillets de renseignements fiscaux » contient la lis
   </li>
   <li>Si vous avez perdu la copie modifiée ou si vous voulez apporter d'autres modifications à vos feuillets de renseignements fiscaux, veuillez communiquer avec nous.
   </li>
-</ul>
+</ul>-->
 
 
 <p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Retour au Régime de pensions du Canada / Sécurité de la vieillesse</a></p><br><br>
