--- a/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing.html
+++ b/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing.html
@@ -156,7 +156,7 @@
   
   <h1 property="name" id="wb-cont" dir="ltr">Change My Tax Slip Delivery</h1>
 
-		<p><strong>--We have started our mailing process for the current year tax year. If you change your tax slip delivery now, the change will take effect on DD MM, YYYY. [following year] [This paragraph appears only when the client accesses TISO during the year end processing period]--</strong></p>
+		<!--<p><strong>--We have started our mailing process for the current year tax year. If you change your tax slip delivery now, the change will take effect on DD MM, YYYY. [following year] [This paragraph appears only when the client accesses TISO during the year end processing period]--</strong></p>-->
   <h3>CPP and/or OAS Tax Slips</h3>  
     
     <p>Currently you get your CPP and/or OAS tax slips <strong>by mail</strong>.</p>
